# django_tutorial

./: .gitignore  pyproject.toml
myproject/: Untitled.ipynb  pytest.ini  setup.cfg
myproject/employees/: schemas.py  tests.py
myproject/employees/migrations/: 0001_initial.py
myproject/myapp/: models.py  serializers.py  urls.py  views.py
myproject/myapp/migrations/: 0001_initial.py  0002_alter_item_description.py
myproject/myproject/: api.py  settings.py  urls.py
myproject/tests/: tests.py
