[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["mulchus <mulch@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.6"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "^5.3.1"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
django-extensions = "^3.2.3"
jupyter = "^1.1.1"
django-ninja = "^1.3.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "myproject.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "-p no:warnings"

[tool.mypy]
python_version = 3.11
warn_unused_configs = true
#ignore_missing_imports = true
#strict = true
#ignore_errors = true
#disable_error_code = ["import-untyped", "var-annotated"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
